<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <EditText
        android:id="@+id/cacheName"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/cache_name_placeholder"/>
    <EditText
        android:id="@+id/cacheGc"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cacheName"
        android:hint="@string/cache_gc_placeholder"/>

    <TextView
        android:id="@+id/cache_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="N"
        android:layout_marginTop="10dp"
        android:layout_below="@id/cacheGc"/>
    <EditText
        android:id="@+id/cache_latitude_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_alignBaseline="@id/cache_n"
        android:layout_toRightOf="@id/cache_n"
        android:hint="00"
        android:numeric="integer"
        />
    <TextView
        android:id="@+id/cache_degree_sign_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/cache_latitude_degree"
        android:layout_toRightOf="@id/cache_latitude_degree"
        android:textColor="#000000"
        android:text=""/>

    <EditText
        android:id="@+id/cache_latitude_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_alignBaseline="@id/cache_n"
        android:layout_toRightOf="@id/cache_degree_sign_latitude"
        android:hint="00.0000"
        android:numeric="decimal"/>

    <TextView
        android:id="@+id/cache_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="E"
        android:layout_marginTop="10dp"
        android:layout_below="@id/cache_n"/>
    <EditText
        android:id="@+id/cache_longitude_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_alignBaseline="@id/cache_e"
        android:layout_toRightOf="@id/cache_e"
        android:hint="00"
        android:numeric="integer"
        />
    <TextView
        android:id="@+id/cache_degree_sign_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/cache_longitude_degree"
        android:layout_toRightOf="@id/cache_longitude_degree"
        android:textColor="#000000"
        android:text=""/>

    <EditText
        android:id="@+id/cache_longitude_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_alignBaseline="@id/cache_e"
        android:layout_toRightOf="@id/cache_degree_sign_longitude"
        android:hint="00.0000"
        android:numeric="decimal"/>

    <Spinner
        android:id="@+id/cache_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/cacheName"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/cache_difficulty_spinner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_below="@id/cache_e"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/cache_difficulty_spinner_name"
        />
    <Spinner
        android:id="@+id/cache_difficulty_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/cache_difficulty_spinner_name"
        android:layout_toRightOf="@id/cache_difficulty_spinner_name"/>

    <TextView
        android:id="@+id/cache_size_spinner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cache_difficulty_spinner"
        android:layout_alignBaseline="@id/cache_difficulty_spinner"
        android:text="@string/cache_size_spinner_name"/>

    <Spinner
        android:id="@+id/cache_size_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cache_size_spinner_name"
        android:layout_alignBaseline="@id/cache_size_spinner_name" />

    <TextView
        android:id="@+id/cache_terrain_spinner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/cache_difficulty_spinner_name"
        android:text="@string/cache_terrain_spinner_name"/>
    <Spinner
        android:id="@+id/cache_terrain_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cache_terrain_spinner_name"
        android:layout_alignBaseline="@id/cache_terrain_spinner_name"
        android:layout_alignLeft="@id/cache_difficulty_spinner"/>
    />

    <TextView
        android:id="@+id/cache_winter_spinner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cache_winter_spinner_name"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/cache_terrain_spinner_name"
        android:layout_marginTop="10dp"/>
    <Spinner
        android:id="@+id/cache_winter_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cache_winter_spinner_name"
        android:layout_alignBaseline="@id/cache_winter_spinner_name"/>

    <View
        android:id="@+id/horizontal_divider"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#000000"
        android:layout_below="@id/cache_winter_spinner_name"/>
    <EditText
        android:id="@+id/cache_add_note"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/horizontal_divider"
        android:hint="@string/cache_add_note_placeholder"
        android:padding="2px"
        />
</RelativeLayout>