<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <TextView
        android:id="@+id/single_cache_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="20dp"
        android:textColor="@color/DefaultTextColor"/>
    <View
        android:id="@+id/upperHorizontalDivider"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        style="@style/buttonColor"
        android:layout_below="@+id/single_cache_name"/>

    <View
        android:id="@+id/single_cache_circle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/single_cache_name"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:textColor="@color/DefaultTextColor"
        style="@style/buttonColor"
        />

    <TextView
        android:id="@+id/single_cache_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/DefaultTextColor"
        android:text="N"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/upperHorizontalDivider"/>
    <TextView
        android:id="@+id/single_cache_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_alignBaseline="@id/single_cache_n"
        android:layout_toRightOf="@id/single_cache_n"
        android:layout_marginLeft="10dp"
        android:textColor="@color/DefaultTextColor"
        android:background="@drawable/button_border_blue"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/single_cacheGc"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/single_cache_latitude"
        android:layout_toRightOf="@id/single_cache_latitude"
        android:layout_marginLeft="50px"
        android:textColor="@color/DefaultTextColor"
        android:background="@drawable/button_border_blue"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/single_cache_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/DefaultTextColor"
        android:text="E"
        android:layout_marginTop="20dp"
        android:layout_below="@id/single_cache_n"/>
    <TextView
        android:id="@+id/single_cache_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_alignBaseline="@id/single_cache_e"
        android:layout_alignLeft="@id/single_cache_latitude"
        android:textColor="@color/DefaultTextColor"
        android:background="@drawable/button_border_blue"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/single_cache_difficulty_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/single_cache_difficulty_name"
        android:textColor="@color/DefaultTextColor"
        android:layout_below="@id/single_cache_e"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/single_cache_difficulty_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/single_cache_difficulty_name"
        android:layout_toRightOf="@id/single_cache_difficulty_name"
        android:layout_marginLeft="10dp"
        android:textColor="@color/DefaultTextColor"
        android:background="@drawable/button_border_blue"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/single_cache_size_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/cache_size_spinner_name"
        android:textColor="@color/DefaultTextColor"
        android:layout_alignBaseline="@id/single_cache_difficulty_name"
        android:layout_toRightOf="@id/single_cache_difficulty_value"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:id="@+id/single_cache_size_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/single_cache_size_name"
        android:layout_toRightOf="@id/single_cache_size_name"
        android:layout_marginLeft="10dp"
        android:textColor="@color/DefaultTextColor"
        android:background="@drawable/button_border_blue"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/single_cache_terrain_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/single_cache_terrain_name"
        android:textColor="@color/DefaultTextColor"
        android:layout_below="@id/single_cache_difficulty_name"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/single_cache_terrain_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/single_cache_terrain_name"
        android:layout_toRightOf="@id/single_cache_terrain_name"
        android:layout_alignLeft="@+id/single_cache_difficulty_value"
        android:textColor="@color/DefaultTextColor"
        android:background="@drawable/button_border_blue"
        android:padding="5dp"/>


    <TextView
        android:id="@+id/single_cache_winter_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/cache_winter_spinner_name"
        android:textColor="@color/DefaultTextColor"
        android:layout_below="@id/single_cache_terrain_name"
        android:layout_alignLeft="@+id/single_cache_terrain_name"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/single_cache_winter_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/single_cache_winter_name"
        android:layout_toRightOf="@id/single_cache_winter_name"
        android:layout_alignLeft="@+id/single_cache_size_value"
        android:textColor="@color/DefaultTextColor"
        android:background="@drawable/button_border_blue"
        android:padding="5dp"/>



    <Button
        android:id="@+id/single_cache_remove_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/single_cache_remove_button_text"
        style="@style/buttonColor"
        />

    <Button
        android:id="@+id/single_cache_modify_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/single_cache_modify_button_text"
        style="@style/buttonColor"
        />


    <TextView
        android:id="@+id/single_cache_note"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/single_cache_winter_name"
        android:layout_above="@+id/single_cache_modify_button"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/DefaultTextColor"
        android:background="@drawable/button_border_blue"
        android:padding="10dp"
        />

</RelativeLayout>

